--- a/src/subscriber/form/templates/form.html
+++ b/src/subscriber/form/templates/form.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img src="{{url_for('static', filename='logo.png') }}" width="100" height="100">
     <div>
     <h1>🎮 Game Tracker subscribe form </h1>
     </div>
