--- a/src/subscriber/form/templates/unsub.html
+++ b/src/subscriber/form/templates/unsub.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <img src="{{url_for('static', filename='logo.png') }}" width="100" height="100">
+
     <div>
         <h1>🎮 Game Tracker Unsubscribe</h1>
     </div>
